# api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle  copy_mono.sh  demo.ipynb  docker-compose.yaml  generate.sh  go.mod  go.sum  protoc.sh  requirements-demo.txt  requirements-test.txt  requirements.txt  settings.gradle  setup.py
cpp/: CMakeLists.txt  Dockerfile
cpp/cmake/: FindProtobuf.cmake
cpp/epl-protobuf-v1/: CMakeLists.txt
cpp/epl-protobuf-v1/epl/protobuf/v1/: geometry.pb.cc  geometry.pb.h  geometry_service.grpc.pb.cc  geometry_service.grpc.pb.h  geometry_service.pb.cc  geometry_service.pb.h  query.pb.cc  query.pb.h  stac.pb.cc  stac.pb.h  stac_service.grpc.pb.cc  stac_service.grpc.pb.h  stac_service.pb.cc  stac_service.pb.h
cpp/epl/protobuf/v1/: geometry.pb.cc  geometry_service.grpc.pb.h  stac.pb.cc  stac.pb.h  stac_service.pb.h
cpp/protobuf-lib/: CMakeLists.txt
cpp/protobuf-lib/epl/protobuf/v1/: geometry.pb.cc  geometry.pb.h  geometry_service.grpc.pb.cc  geometry_service.grpc.pb.h  geometry_service.pb.cc  geometry_service.pb.h  query.pb.cc  stac.pb.cc  stac.pb.h  stac_service.grpc.pb.cc  stac_service.grpc.pb.h  stac_service.pb.cc
cpp/test/: CMakeLists.txt  helper.cpp  helper.h  main.cpp
doc/: index.html
docker/: generate.sh  push.sh
docker/c-builder/: Dockerfile
docker/proj/: Dockerfile
docs/: index.html
dotnet/: GeoGrpc.sln
dotnet/EplProtobuf/: EplProtobuf.csproj  Geometry.cs  GeometryService.cs  GeometryServiceGrpc.cs  Query.cs  Stac.cs  StacService.cs  StacServiceGrpc.cs
dotnet/EplProtobufV1/: Geometry.cs  GeometryServiceGrpc.cs  Query.cs  Stac.cs  StacService.cs  StacServiceGrpc.cs
epl-geometry-api-ex/: settings.gradle
epl/geometry/: __init__.py  base.py  collection.py  geo.py  geometry_operators_pb2.py  geometry_operators_pb2_grpc.py  linestring.py  multilinestring.py  multipoint.py  multipolygon.py  point.py  polygon.py
epl/shapelier/geometry/: base.py  linestring.py  multipolygon.py  polygon.py
geometry_client/: geometry_operators_pb2.py  geometry_operators_pb2_grpc.py  sample.py
golang/: README.md
golang/epl/geometry/: bistream.go  operators.go  unary.go
golang/epl/grpc/: geometry_operators.pb.go  stac_operators.pb.go  stac_service.pb.go
golang/epl/protobuf/: geometry.pb.go  geometry_service.pb.go  naip.pb.go  query.pb.go  stac.pb.go  stac_service.pb.go
golang/epl/protobuf/v1/: geometry.pb.go  geometry_service.pb.go  geometry_x.go  query.pb.go  query_x.go  stac.pb.go  stac_service.pb.go  stac_x.go
golang/test/: geometry_test.go
gradle/wrapper/: gradle-wrapper.properties
java/geometry-chain/: Dockerfile  settings.gradle
java/geometry-chain/epl-geometry-api/: build.gradle  settings.gradle
java/geometry-chain/epl-geometry-api-ex/: build.gradle
java/geometry-chain/epl-geometry-service/: build.gradle  settings.gradle
proto/: generate.sh  geometry_operators.proto  protoc.sh
proto/epl/geometry/: geometry_operators.proto
proto/epl/grpc/: geometry_operators.proto  stac_operators.proto  stac_service.proto
proto/epl/grpc/geometry/: geometry_operators.proto
proto/epl/protobuf/: geometry.proto  geometry_operators.proto  geometry_service.proto  naip.proto  query.proto  stac.proto  stac_service.proto
proto/epl/protobuf/v1/: geometry.proto  geometry_service.proto  query.proto  stac.proto  stac_service.proto
proto/v1/epl/protobuf/: geometry.proto  geometry_service.proto  query.proto  stac.proto  stac_service.proto
python/: setup.py
python/epl/protobuf/: geometry_pb2.py  geometry_service_pb2_grpc.py  naip_pb2.py  query_pb2.py  stac_pb2.py  stac_service_pb2_grpc.py
python/epl/protobuf/v1/: geometry_pb2.py  query_pb2.py  stac_pb2.py
python/epl_geometry/: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt  setup.py
python/epl_geometry/epl/geometry/: base.py  multilinestring.py  multipoint.py  multipolygon.py  polygon.py
python/epl_geometry/test/: test_client.py
python/epl_protobuf/: setup.py
python/epl_protobuf/epl/protobuf/v1/: geometry_pb2.py  geometry_service_pb2_grpc.py  query_pb2.py  stac_pb2.py  stac_service_pb2_grpc.py
python/epl_protobuf_v1/: README.md  requirements.txt
python/epl_protobuf_v1/epl/protobuf/v1/: geometry_pb2.py  geometry_service_pb2.py  geometry_service_pb2_grpc.py  query_pb2.py  stac_pb2.py  stac_service_pb2.py  stac_service_pb2_grpc.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs
rust/src/proto/: geometry.rs  geometry_service.rs  mod.rs  query.rs  stac.rs  stac_service.rs  stac_service_grpc.rs
rust/src/proto/grpc/: geometry_service_grpc.rs
rust/tests/: mod.rs
src/epl/: geometry.proto  geometry_operators.proto  stac.proto
src/epl/grpc/: geometry_operators.proto
src/epl/protobuf/: geometry_operators.proto  stac.proto  stac_item_result.proto
src/main/java/org/epl/geometry/: GeneralizeComparator.java  GeneralizeType.java  GeoDist.java  GeodesicBufferer.java  GeodesicDensifier.java  GeometryEngineEx.java  InverseResult.java  OperatorBufferEx.java  OperatorBufferExCursor.java  OperatorBufferExLocal.java  OperatorEnclosingCircle.java  OperatorEx.java  OperatorFactoryEx.java  OperatorFactoryLocalEx.java  OperatorGeneralizeByArea.java  OperatorGeneralizeByAreaCursor.java  OperatorGeneralizeByAreaLocal.java  OperatorGeodesicBuffer.java  OperatorGeodesicBufferCursor.java  OperatorGeodesicBufferLocal.java  OperatorGeodeticDensifyByLength.java  OperatorGeodeticDensifyCursor.java  OperatorGeodeticDensifyLocal.java  OperatorGeodeticInverse.java  OperatorGeodeticInverseLocal.java  OperatorGeodeticLength.java  OperatorGeodeticLengthLocal.java  OperatorProject.java  OperatorProjectCursor.java  OperatorProjectLocal.java  OperatorSimpleRelationEx.java  Point2DEx.java  ProjectionTransformation.java  Projector.java  SpatialReferenceEx.java  SpatialReferenceExImpl.java
src/test/java/org/epl/geometry/: TestContains.java  TestConvexHull.java  TestGeneralize.java  TestProjection.java  TestProjectionGigsData.java  TestRandomPoints.java  TestSpatialReference.java
test/: sample.py  test_client.py
(+143 files in other folders)
